<resources>

    <!--App Level Strings-->
    <string name="app_name">Pundit</string>
    <string name="breaking_news_heading_text">BREAKING NEWS</string>
    <string name="facebook_app_id">1775215779172553</string>
    <string name="fb_login_protocol_scheme">fb1775215779172553</string>
    <string name="CONSUMER_KEY">TkCiL8dSFneGdDpU4rFQwM69i</string>
    <string name="CONSUMER_SECRET">csJU0JKbIqy2sqvQYHNfxN3dBXoyFUJ889OAjniNXJ8L923Ecm</string>
    <string name="fabric_key">24a857ef84a5819bbf384f2c2c97505da3d36511</string>

    <string name="helvetica_neu_bold">Helvetica Neu Bold.ttf</string>
    <string name="helvetica_neue_light">HelveticaNeue Light.ttf</string>
    <string name="helvetica_neue_medium">HelveticaNeue Medium.ttf</string>

    <!--SignupActivity-->
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook_login">Facebook login</string>
    <string name="fields_error_message">Field can not be empty</string>
    <string name="password_match_error_message">Oops! Password does not matches</string>
    <string name="please_check_mail">Please Check Your Mail</string>
    <string name="enter_email">Please Enter Your Email</string>


    <!--DashBoard Activity Strings-->
    <string name="app_logo_string">App Logo</string>
    <string name="broadcast_text">Broadcast</string>
    <string name="listen_text">Listen</string>
    <string name="pundits_text">Pundits</string>
    <string name="about_pundit_text">About Pundit</string>
    <string name="about_text">About</string>
    <string name="profile_text">Profile</string>
    <string name="share_text">Share</string>
    <string name="pundit_text">Pundit</string>
    <string name="switch_text">Switch</string>
    <string name="chat_text">Chat</string>
    <string name="fb_login_text">Log In</string>
    <string name="fb_logout_text">Log Out</string>
    <string name="ask_user_for_login">Please Login your account</string>
    <string name="fb_error_message">OOps! Something went wrong. Please try again.</string>
    <string name="fb_cancel_message">Facebook login canceled.</string>
    <string name="register_successfully_message">You have successfully logged in.</string>
    <string name="under_development_message">Under Development</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="fb_logout_message">You have successfully logged out.</string>
    <string name="search_game">Search Sports</string>
    <string name="user">User</string>
    <string name="teams">Team</string>
    <string name="sport">Sport</string>
    <string name="league">League</string>


    <!--Profile Activity-->
    <string name="follower_string">Followers</string>
    <string name="follower_initial_count">00</string>
    <string name="following_string">Following</string>
    <string name="add_tags">Add Tags:</string>
    <string name="bio_string">Bio </string>
    <string name="facebook_string">Facebook </string>
    <string name="twitter_string">Twitter</string>
    <string name="youtube_string">Youtube</string>
    <string name="tags_filtstring">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@$%^*()_+={}[]</string>
    <string name="hash_tag_warning">#HashTag Can not be Blank</string>
    <string name="delete_diaog_title">Delete Photo</string>
    <string name="delete_diaog_message">Do you want to delete this image?</string>
    <string name="update_success_message">Profile Updated Successfully.</string>
    <string name="welcome">Welcome To Pundit</string>
    <string name="follow_me">Follow Me</string>
    <string name="listen_live">Follow Me</string>
    <string name="self_follow_text">You can not follow yourself</string>


    <!--Messages Strings -->
    <string name="internet_connected_text">Good! Connected to Internet</string>
    <string name="internet_not_connected_text">Sorry! Not connected to internet</string>
    <string name="server_error">Sorry! Server not responding</string>
    <string name="delete">Delete</string>


    <!--MatchList Activity -->
    <string name="match_time">MATCH TIME</string>
    <string name="team">TEAMS</string>
    <string name="score">SCORE</string>
    <string name="time">TIME</string>
    <string name="league_table_teams">LEAGUE TABLE</string>
    <string name="no_mataches_available">No Matches Available</string>


    <!--Standing Screen Activity -->
    <string name="position">Pos</string>
    <string name="club">Club</string>
    <string name="played">P</string>
    <string name="win">W</string>
    <string name="draw">D</string>
    <string name="loss">L</string>
    <string name="goal_differnece">GD</string>
    <string name="points">Pt</string>
    <string name="go_live">Go Live!</string>
    <string name="you_are_live">YOU ARE LIVE!!</string>
    <string name="no_data_available">No Teams Available</string>
    <string name="tap_club">Tap a club name to Broadcast about this team</string>
    <string name="tap_club_listen">Tap a club name to Listen about this team</string>


    <!--live Broadcast Activity-->
    <string name="cancel_broadcast_title">Stop Broadcasting!</string>
    <string name="cancel_broadcast_message">Are you sure to stop Broadcasting?</string>
    <string name="start_broadcast_success_msg">You are live now!</string>
    <string name="ft_string">FT</string>
    <string name="fixture_string">Fixture</string>
    <string name="playing_String">Playing</string>
    <string name="postpone_string">Postponed</string>
    <string name="full_time">FT</string>
    <string name="click_name_to_listen_message">Click Name To Listen</string>
    <string name="update_success_scores">Scores Updated Successfully.</string>
    <string name="cancel_listen_title">Stop Listening !</string>
    <string name="cancel_listen_message">Are you sure to stop Listening ?</string>
    <string name="switch_listen_title">Switch Broadcaster !</string>
    <string name="switch_listen_message">Are you sure to switch Broadcaster ?</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="no_live_feeds">No Live Feeds</string>
    <string name="team_talk">Team Talk</string>
    <string name="sorry_title">Sorry</string>
    <string name="broadcaster_left_message">Broadcaster Left</string>
    <string name="ok">OK</string>
    <string name="done_text">Done</string>
    <string name="name_updated_successfully">Podcast Name Updated Successfully.</string>
    <string name="time_new">Time</string>


    <string name="default_media_location_folder">Applozic</string>
   <!-- <string name="applozic_id">softuvo26632f185aa66535997473c</string>-->

     <string name="applozic_id">punditsports348ee5f2dc9df272707eb1a3f0b6ad07c</string>

    <string name="podcast">PODCAST MATCHES</string>
    <string name="podcasts_details">MATCH PODCASTS</string>
    <string name="following">FOLLOWING</string>
    <string name="follower">FOLLOWERS</string>
    <string name="live_right_now">LIVE RIGHT NOW</string>
    <string name="lancaster_city_fc">Lancaster City FC</string>
    <string name="gareth_nobel">Gareth Nobel</string>
    <string name="v">V</string>
    <string name="no_live_pundit">No Live Pundit !</string>
    <string name="broadcast">BROADCAST</string>
    <string name="listen">LISTEN</string>
    <string name="reconnecting">Reconnecting....</string>
    <string name="live_now">Live Now</string>
    <string name="about_me_tell_the_world_who_you_are">ABOUTME: (tell the world who you are)</string>


    <string name="error_no_yt_link">Not a valid YouTube link!</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="manage_leagues">Manage\nLeagues</string>
    <string name="manage_league">Manage Leagues</string>
    <string name="team_matches">Team Matches</string>
    <string name="schedule_later">Schedule Later</string>
    <string name="schedule_date_and_time">Schedule Date and Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="please_enter_title">Please Enter Title</string>
    <string name="save">Save</string>
    <string name="schedule_broadcast">Schedule Broadcast</string>
    <string name="scheduled_broadcasts">Scheduled\nBroadcasts</string>
    <string name="unable">Unable to Schedule! Try Again Later</string>
    <string name="scheduled_brodacasts">Scheduled Brodacasts</string>

</resources>
