<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_match_header"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/colorMatchScreenBackground"
    android:orientation="horizontal"
    android:paddingStart="@dimen/pading_3dp"
    android:paddingEnd="@dimen/pading_3dp"
    android:weightSum="4">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="start|center"
        android:text="@string/match_time"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.8"
        android:gravity="start|center"
        android:text="@string/team"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:gravity="center"
        android:text="@string/score"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center"
        android:text="@string/time"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_small" />

</LinearLayout>
