<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="140dp"
    android:background="@drawable/custom_alert_shape"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_heading_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|top"
        android:text="@string/sorry_title"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_left_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/broadcaster_left_message"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_medium" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorStandingScreenBackground" />
    <Button
        android:id="@+id/btn_ok_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/ok"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_large"/>

</LinearLayout>

