<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_match_header_listner"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:weightSum="3"
    android:orientation="horizontal"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:background="@color/colorMatchScreenBackground"
    android:paddingStart="@dimen/pading_3dp"
    android:paddingEnd="@dimen/pading_3dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.82"
        android:text="@string/team"
        android:textSize="@dimen/text_size_small"
        android:gravity="center"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="@dimen/text_size_small"
        android:gravity="center"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.58"
        android:text="@string/score"
        android:textSize="@dimen/text_size_small"
        android:gravity="center"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:text="@string/time"
        android:textSize="@dimen/text_size_small"
        android:gravity="center"
        android:background="@color/colorMatchScreenHeadingBackground"
        android:textColor="@color/colorWhite"
       />

</LinearLayout>
